WYSIWYG makes the teaser field super tall and slightly too wide; fix it up, narrow the form a bit.

--- a/os_slideshow.admin.css
+++ b/os_slideshow.admin.css
@@ -2,7 +2,14 @@
   width: 32%;
   float: left;
 }
+.ombuslide-processed .overview-column .label-wrapper {
+  display: none;
+}
+.ombuslide-processed .overview-column.title {
+  margin-top: 1em;
+}
 .ombuslide-processed .overview-column img {
+  float: left;
   width: 70px;
   height: 70px;
 }
